<resources>
    <string name="app_name">ActivitiesAndIntents-Sharedata</string>
    <string name="open_website">Open Website</string>
    <string name="websiteText">Enter the website you want to access</string>
    <string name="title">Different Intent Redirects</string>
    <string name="locationText">Enter the location you want to access</string>
    <string name="open_location">Open Location</string>
    <string name="shareText">Enter the text you want to share</string>
    <string name="share_text">Share Text</string>
    <string name="dialText">Dial the number you want to call</string>
    <string name="call_number">Call Number</string>
</resources>